Modification de la librairie.
Modification de la librairie pour pour utiliser la nouvelle classe de requêtage HTTP Java (java.net.http.HttpClient, import java.net.http.HttpRequest, import java.net.http.HttpResponse au lieu de la classe HttpURLConnection).